Fix possible text overflow on Instagram

--- a/client/js/components/instagram/instagram-style.scss
+++ b/client/js/components/instagram/instagram-style.scss
@@ -88,6 +88,12 @@ $instagram-text-shadow: 0 2px 1px white;
   a {
     @extend .instagram-comment-username;
   }
+
+  div {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 }
 
 .instagram-message {
